--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
 #game {
-    text-align: center;
-  }
-  
+
+  text-align: center;
+}
+
+#game h1 {
+  grid-area: header;
+}
+
+#game #word {
+  grid-area: word;
+}
+
+#game #input {
+  grid-area: input;
+  text-align: center;
+}
+
+#game button {
+  grid-area: input;
+}
+
+#game #result {
+  grid-area: result;
+}
